svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: {appname}
    project-code: {project}
  name: {appname}
  namespace: {namespace}
spec:
  ports:
    - name: http
      port: {PORT}
      protocol: TCP
      targetPort: {PORT}
  selector:
    app: {appname}
    project-code: {project}
  type: ClusterIP
