ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  labels:
    app: {appname}
    project-code: {project}
  name: {appname}
  namespace: {namespace}
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-access-log: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: {domainname}
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
             service:
                 name: {appname}
                 port:
                     number: {PORT}
